# OCR

./: #Manager.cpp#  .gitignore  CMakeLists.txt  Evolver.cpp  Evolver.h  Gene.cpp  Gene.h  InputNeuron.cpp  InputNeuron.h  Manager.cpp  Manager.h  Network.cpp  Network.h  Neuron.cpp  Neuron.h  OpenCL.cpp  OpenCL.h  Prompt.cpp  Prompt.h  main.cpp  weights.txt
cmake/: FindOpenCL.cmake
save/: best.txt
